# Rusql

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs  main.rs  replloop.rs
src/meta_command/: mod.rs
src/repl/: mod.rs
src/sql/: mod.rs
src/sql/db/: database.rs  table.rs
src/sql/parser/: create.rs  drop.rs  insert.rs  list_tables.rs  mod.rs
src/util/: intro.rs
tests/: database_tests.rs  error_tests.rs  integration_tests.rs  parser_tests.rs  table_tests.rs
util/: metacommands.md
util/Schemas/: schema.sql
