[package]
name = "rusql"
version = "0.1.0"
authors = ["Huzaifa Naseer <huzaifanaseer026@gmail.com>"]
edition = "2021"
description = "A lightweight SQLite-like database engine implemented in Rust with an interactive REPL interface"
license = "MIT"
repository = "https://github.com/HN026/Rusql"
keywords = ["database", "sql", "sqlite", "storage", "embedded"]
categories = ["database", "command-line-utilities"]
readme = "README.md"

[lib]
name = "rusql"
path = "src/lib.rs"

[[bin]]
name = "rusql"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "14.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["cargo"] }
prettytable-rs = "0.10"
rustyline-derive = "0.10"
thiserror = "1.0"
colored = "2.1"
sqlparser = "0.43.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"
tempfile = "3.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
